--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browser-sync": "2.26.x",
     "eslint": "4.16.0",
     "eslint-config-htmlacademy": "0.4.x",
+    "gh-pages": "^3.1.0",
     "gulp": "4.0.x",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
@@ -30,6 +31,7 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "test": "npm run editorconfig && npm run stylelint && eslint source/js/",
+    "deploy": "gulp deploy",
     "build": "gulp build",
     "start": "gulp start",
     "webp": "gulp webp",
